--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --hot",
     "test": "cross-env NODE_ENV=test mocha --require babel-register \"test/**/*.spec.js\"",
     "lint": "eslint test src",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+	"predeploy": "npm run build",
+	"deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andrestraube/pacman-covid-19.git"
+    "url": "git+https://github.com/astraube/pacman-covid-19.git"
   },
   "keywords": [],
   "author": "Andre Straube <a.straube.m@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/andrestraube/pacman-covid-19/issues"
+    "url": "https://github.com/astraube/pacman-covid-19/issues"
   },
-  "homepage": "https://github.com/andrestraube/pacman-covid-19#readme",
+  "homepage": "https://astraube.github.io/pacman-covid-19",
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
@@ -38,6 +38,7 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.8.2",
     "file-loader": "^6.0.0",
+    "gh-pages": "^2.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
@@ -45,8 +46,8 @@
     "react-hot-loader": "^4.12.20",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "url-loader": "^4.1.0",
     "svg-url-loader": "^5.0.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
